# Intraday-Power-Optimisation-Cockpit

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/cockpit/: __init__.py  adapters.py  api.py  battery_layer.py  battery_path_layer.py  battery_physics.py  coordinator_layer.py  forecast_layer.py  full_action_optimiser.py  liquidity.py  market_layer.py  models.py  opportunity_cost.py  optionality_layer.py  pipeline.py  position_layer.py  rolling_service.py  settlement.py  simulated_environment.py
backend/tests/: conftest.py  test_api.py  test_auction_window.py  test_battery_flexibility.py  test_battery_path.py  test_coordinator.py  test_forecast_position.py  test_live_state_history.py  test_market_liquidity.py  test_optionality.py  test_pipeline.py  test_rolling_history_bootstrap.py  test_rolling_optimisation.py  test_settlement.py  test_time_driven_rolling.py  test_visual_context.py
docs/: battery-flexibility.md  battery-path.md  coordinator.md  data-flow.md  forecast-position.md  market-liquidity.md  optionality.md  rolling-optimisation.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  BatteryFlexibilityPage.tsx  BatteryPathPage.tsx  CockpitChart.tsx  ConnectionStatus.tsx  CoordinatorPage.tsx  DiagnosticsPage.tsx  ForecastPositionPage.tsx  HistoryWindowSelector.tsx  LiveStatePage.tsx  MarketLiquidityPage.tsx  OptimisationPage.tsx  OptionalityPage.tsx  ProductNav.tsx  TimeSeriesChart.tsx  TrustStatusStrip.tsx  api.ts  chartDomain.ts  historyWindow.ts  main.tsx  (+4 more)
(+8 files in other folders)
