[project]
name = "intraday-power-cockpit"
version = "0.8.0"
description = "Rolling UK intraday power optimisation cockpit with explicit non-executable diagnostics"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "highspy>=1.11,<2",
  "pydantic>=2.11,<3",
  "pyomo>=6.9,<7",
  "tzdata>=2026.1",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
